add reset antireplay
